--- a/notebooks/mutation_rate.ipynb
+++ b/notebooks/mutation_rate.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import pickle \n",
+    "import pickle\n",
     "\n",
     "import altair as alt\n",
     "import numpy as np\n",
@@ -187,10 +187,10 @@
    ],
    "source": [
     "noisy_data = (\n",
-    "    pd.read_csv('RBD_variants_escape_noisy.csv', na_filter=None)\n",
-    "    .query('concentration in [0.25, 1, 4]')\n",
+    "    pd.read_csv(\"RBD_variants_escape_noisy.csv\", na_filter=None)\n",
+    "    .query(\"concentration in [0.25, 1, 4]\")\n",
     "    .reset_index(drop=True)\n",
-    "    )\n",
+    ")\n",
     "\n",
     "noisy_data"
    ]
@@ -247,56 +247,61 @@
     }
    ],
    "source": [
-    "avg_mut_rates = [1,2,3,4]\n",
+    "avg_mut_rates = [1, 2, 3, 4]\n",
     "\n",
     "# Make a directory to house pickled models\n",
-    "os.makedirs('fit_polyclonal_models', exist_ok=True)\n",
-    "       \n",
+    "os.makedirs(\"fit_polyclonal_models\", exist_ok=True)\n",
+    "\n",
+    "\n",
     "def fit_polyclonal(n):\n",
     "    \"\"\"\n",
     "    Fit `Polyclonal` model with data with a specific average mutation rate.\n",
     "    Returns fit `Polyclonal` object.\n",
     "    \"\"\"\n",
-    "    poly_abs = polyclonal.Polyclonal(data_to_fit=noisy_data.query(f\"library == 'avg{n}muts'\"),\n",
-    "                                     activity_wt_df=pd.DataFrame.from_records(\n",
-    "                                         [('1', 1.0),\n",
-    "                                          ('2', 3.0),\n",
-    "                                          ('3', 2.0),\n",
-    "                                          ],\n",
-    "                                         columns=['epitope', 'activity'],\n",
-    "                                         ),\n",
-    "                                     site_escape_df=pd.DataFrame.from_records(\n",
-    "                                         [('1', 417, 10.0),\n",
-    "                                          ('2', 484, 10.0),\n",
-    "                                          ('3', 444, 10.0),\n",
-    "                                          ],\n",
-    "                                         columns=['epitope', 'site', 'escape'],\n",
-    "                                         ),\n",
-    "                                     data_mut_escape_overlap='fill_to_data',\n",
-    "                                 )\n",
+    "    poly_abs = polyclonal.Polyclonal(\n",
+    "        data_to_fit=noisy_data.query(f\"library == 'avg{n}muts'\"),\n",
+    "        activity_wt_df=pd.DataFrame.from_records(\n",
+    "            [\n",
+    "                (\"1\", 1.0),\n",
+    "                (\"2\", 3.0),\n",
+    "                (\"3\", 2.0),\n",
+    "            ],\n",
+    "            columns=[\"epitope\", \"activity\"],\n",
+    "        ),\n",
+    "        site_escape_df=pd.DataFrame.from_records(\n",
+    "            [\n",
+    "                (\"1\", 417, 10.0),\n",
+    "                (\"2\", 484, 10.0),\n",
+    "                (\"3\", 444, 10.0),\n",
+    "            ],\n",
+    "            columns=[\"epitope\", \"site\", \"escape\"],\n",
+    "        ),\n",
+    "        data_mut_escape_overlap=\"fill_to_data\",\n",
+    "    )\n",
     "    poly_abs.fit()\n",
     "    return poly_abs\n",
+    "\n",
     "\n",
     "# Store all fit models in a dictionary for future lookup\n",
     "fit_models = {}\n",
     "\n",
     "for n in avg_mut_rates:\n",
     "    # These are the keys for fit models\n",
-    "    model_string = f'noisy_[0.25, 1, 4]conc_{n}muts'\n",
+    "    model_string = f\"noisy_[0.25, 1, 4]conc_{n}muts\"\n",
     "\n",
     "    # If the pickled model exists in fit_polyclonal_models directory,\n",
-    "    # load it and update fit_models \n",
-    "    if os.path.exists(f'fit_polyclonal_models/{model_string}.pkl') is True:\n",
-    "        model = pickle.load(open(f'fit_polyclonal_models/{model_string}.pkl', 'rb'))\n",
-    "        fit_models.update({model_string : model})\n",
+    "    # load it and update fit_models\n",
+    "    if os.path.exists(f\"fit_polyclonal_models/{model_string}.pkl\") is True:\n",
+    "        model = pickle.load(open(f\"fit_polyclonal_models/{model_string}.pkl\", \"rb\"))\n",
+    "        fit_models.update({model_string: model})\n",
     "        print(f\"Model on data with {n} average mutations was already fit.\")\n",
     "    else:\n",
     "        # Else, fit a model using fit_polyclonal(), save it to the\n",
-    "        # fit_polyclonal_models directory, and update fit_models \n",
+    "        # fit_polyclonal_models directory, and update fit_models\n",
     "        model = fit_polyclonal(n)\n",
-    "        fit_models.update({model_string : model})\n",
-    "        pickle.dump(model, open(f'fit_polyclonal_models/{model_string}.pkl', 'wb'))\n",
-    "        print(f\"Model on data with {n} average mutations fit and saved.\")  "
+    "        fit_models.update({model_string: model})\n",
+    "        pickle.dump(model, open(f\"fit_polyclonal_models/{model_string}.pkl\", \"wb\"))\n",
+    "        print(f\"Model on data with {n} average mutations fit and saved.\")"
    ]
   },
   {
@@ -312,34 +317,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_corrs = pd.DataFrame({'epitope' : [], \n",
-    "                          'correlation (R^2)' : [], \n",
-    "                          'mutation_rate' : []})\n",
+    "all_corrs = pd.DataFrame({\"epitope\": [], \"correlation (R^2)\": [], \"mutation_rate\": []})\n",
     "\n",
     "for n in avg_mut_rates:\n",
-    "    model = fit_models[f'noisy_[0.25, 1, 4]conc_{n}muts']\n",
+    "    model = fit_models[f\"noisy_[0.25, 1, 4]conc_{n}muts\"]\n",
     "\n",
-    "    mut_escape_pred = (\n",
-    "        pd.read_csv('RBD_mut_escape_df.csv')\n",
-    "        .merge((model.mut_escape_df\n",
-    "                .assign(epitope=lambda x: 'class ' + x['epitope'].astype(str))\n",
-    "                .rename(columns={'escape': 'predicted escape'})\n",
-    "                ),\n",
-    "               on=['mutation', 'epitope'],\n",
-    "               validate='one_to_one',\n",
-    "               )\n",
-    "        )\n",
+    "    mut_escape_pred = pd.read_csv(\"RBD_mut_escape_df.csv\").merge(\n",
+    "        (\n",
+    "            model.mut_escape_df.assign(\n",
+    "                epitope=lambda x: \"class \" + x[\"epitope\"].astype(str)\n",
+    "            ).rename(columns={\"escape\": \"predicted escape\"})\n",
+    "        ),\n",
+    "        on=[\"mutation\", \"epitope\"],\n",
+    "        validate=\"one_to_one\",\n",
+    "    )\n",
     "\n",
-    "    corr = (mut_escape_pred\n",
-    "            .groupby('epitope')\n",
-    "            .apply(lambda x: x['escape'].corr(x['predicted escape']) ** 2)\n",
-    "            .rename('correlation (R^2)')\n",
-    "            .reset_index()\n",
-    "            )\n",
-    "    \n",
-    "    all_corrs = pd.concat([all_corrs, \n",
-    "                    corr.assign(mutation_rate = [f'avg{n}muts'] * len(corr.index))\n",
-    "                        ])"
+    "    corr = (\n",
+    "        mut_escape_pred.groupby(\"epitope\")\n",
+    "        .apply(lambda x: x[\"escape\"].corr(x[\"predicted escape\"]) ** 2)\n",
+    "        .rename(\"correlation (R^2)\")\n",
+    "        .reset_index()\n",
+    "    )\n",
+    "\n",
+    "    all_corrs = pd.concat(\n",
+    "        [all_corrs, corr.assign(mutation_rate=[f\"avg{n}muts\"] * len(corr.index))]\n",
+    "    )"
    ]
   },
   {
@@ -413,13 +415,12 @@
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
     "alt.Chart(all_corrs).mark_circle(size=125).encode(\n",
-    "    x= alt.X('mutation_rate:O', \n",
-    "             sort=alt.EncodingSortField('x', order='descending')),\n",
-    "    y='correlation (R^2):Q',\n",
-    "    column='epitope:N',\n",
-    "    tooltip = ['mutation_rate', alt.Tooltip('correlation (R^2)', format='.3f')],\n",
-    "    color=alt.Color('epitope', legend=None),\n",
-    ").properties(width=200, height=200, title='inferred vs. true mutation escape values')"
+    "    x=alt.X(\"mutation_rate:O\", sort=alt.EncodingSortField(\"x\", order=\"descending\")),\n",
+    "    y=\"correlation (R^2):Q\",\n",
+    "    column=\"epitope:N\",\n",
+    "    tooltip=[\"mutation_rate\", alt.Tooltip(\"correlation (R^2)\", format=\".3f\")],\n",
+    "    color=alt.Color(\"epitope\", legend=None),\n",
+    ").properties(width=200, height=200, title=\"inferred vs. true mutation escape values\")"
    ]
   },
   {
