--- a/optimization_benchmarks/analyze_opt_settings.ipynb
+++ b/optimization_benchmarks/analyze_opt_settings.ipynb
@@ -275,7 +275,7 @@
     }
    ],
    "source": [
-    "csv_file = 'results/opt_settings/aggregated_fit_results.csv'\n",
+    "csv_file = \"results/opt_settings/aggregated_fit_results.csv\"\n",
     "\n",
     "print(f\"Reading results from {csv_file}\")\n",
     "\n",
@@ -311,8 +311,8 @@
    },
    "outputs": [],
    "source": [
-    "metrics = ['loss', 'time', 'corr_prob_escape', 'corr_mut_escape']\n",
-    "datasets = ['noise']\n",
+    "metrics = [\"loss\", \"time\", \"corr_prob_escape\", \"corr_mut_escape\"]\n",
+    "datasets = [\"noise\"]\n",
     "params = [c for c in data.columns.tolist() if c not in datasets and c not in metrics]\n",
     "assert set(data.columns) == set([*metrics, *datasets, *params])"
    ]
@@ -413,39 +413,39 @@
    ],
    "source": [
     "dfs = []\n",
-    "_ = params.remove('sitefirst')\n",
+    "_ = params.remove(\"sitefirst\")\n",
     "for metric in metrics:\n",
-    "    df = (data\n",
-    "          .pivot_table(index=datasets + params,\n",
-    "                       columns='sitefirst',\n",
-    "                       values=metric)\n",
-    "          .assign(diff=lambda x: x['sitefirst'] - x['nosite'])\n",
-    "          .drop(columns=['nosite', 'sitefirst'])\n",
-    "          .rename(columns={'diff': metric})\n",
-    "          )\n",
+    "    df = (\n",
+    "        data.pivot_table(index=datasets + params, columns=\"sitefirst\", values=metric)\n",
+    "        .assign(diff=lambda x: x[\"sitefirst\"] - x[\"nosite\"])\n",
+    "        .drop(columns=[\"nosite\", \"sitefirst\"])\n",
+    "        .rename(columns={\"diff\": metric})\n",
+    "    )\n",
     "    dfs.append(df)\n",
     "sitemodel_df = (\n",
-    "    pd.concat(dfs, axis=1).reset_index()\n",
-    "    .melt(id_vars=datasets + params,\n",
-    "          var_name='metric',\n",
-    "          value_name='increase from site first',\n",
-    "          )\n",
+    "    pd.concat(dfs, axis=1)\n",
+    "    .reset_index()\n",
+    "    .melt(\n",
+    "        id_vars=datasets + params,\n",
+    "        var_name=\"metric\",\n",
+    "        value_name=\"increase from site first\",\n",
     "    )\n",
+    ")\n",
     "\n",
-    "assert len(datasets) == 1, 'plot only works for one dataset'\n",
+    "assert len(datasets) == 1, \"plot only works for one dataset\"\n",
     "\n",
     "sitemodel_chart = (\n",
     "    alt.Chart(sitemodel_df)\n",
     "    .encode(\n",
     "        x=datasets[0],\n",
-    "        y='increase from site first',\n",
+    "        y=\"increase from site first\",\n",
     "        tooltip=params,\n",
-    "        )\n",
+    "    )\n",
     "    .mark_boxplot()\n",
     "    .properties(width=75, height=200)\n",
-    "    .facet(column='metric')\n",
-    "    .resolve_scale(y='independent')\n",
-    "    )\n",
+    "    .facet(column=\"metric\")\n",
+    "    .resolve_scale(y=\"independent\")\n",
+    ")\n",
     "\n",
     "sitemodel_chart"
    ]
@@ -475,12 +475,12 @@
    },
    "outputs": [],
    "source": [
-    "data = (data\n",
-    "        .query('sitefirst == \"sitefirst\"')\n",
-    "        .drop(columns=['sitefirst', 'loss'])\n",
-    "        .reset_index(drop=True)\n",
-    "        )\n",
-    "_ = metrics.remove('loss')"
+    "data = (\n",
+    "    data.query('sitefirst == \"sitefirst\"')\n",
+    "    .drop(columns=[\"sitefirst\", \"loss\"])\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
+    "_ = metrics.remove(\"loss\")"
    ]
   },
   {
@@ -575,39 +575,39 @@
    ],
    "source": [
     "dfs = []\n",
-    "params.remove('collapse')\n",
+    "params.remove(\"collapse\")\n",
     "for metric in metrics:\n",
-    "    df = (data\n",
-    "          .pivot_table(index=datasets + params,\n",
-    "                       columns='collapse',\n",
-    "                       values=metric)\n",
-    "          .assign(diff=lambda x: x['collapsed'] - x['uncollapsed'])\n",
-    "          .drop(columns=['collapsed', 'uncollapsed'])\n",
-    "          .rename(columns={'diff': metric})\n",
-    "          )\n",
+    "    df = (\n",
+    "        data.pivot_table(index=datasets + params, columns=\"collapse\", values=metric)\n",
+    "        .assign(diff=lambda x: x[\"collapsed\"] - x[\"uncollapsed\"])\n",
+    "        .drop(columns=[\"collapsed\", \"uncollapsed\"])\n",
+    "        .rename(columns={\"diff\": metric})\n",
+    "    )\n",
     "    dfs.append(df)\n",
     "collapse_df = (\n",
-    "    pd.concat(dfs, axis=1).reset_index()\n",
-    "    .melt(id_vars=datasets + params,\n",
-    "          var_name='metric',\n",
-    "          value_name='increase from collapsing',\n",
-    "          )\n",
+    "    pd.concat(dfs, axis=1)\n",
+    "    .reset_index()\n",
+    "    .melt(\n",
+    "        id_vars=datasets + params,\n",
+    "        var_name=\"metric\",\n",
+    "        value_name=\"increase from collapsing\",\n",
     "    )\n",
+    ")\n",
     "\n",
-    "assert len(datasets) == 1, 'plot only works for one dataset'\n",
+    "assert len(datasets) == 1, \"plot only works for one dataset\"\n",
     "\n",
     "collapse_chart = (\n",
     "    alt.Chart(collapse_df)\n",
     "    .encode(\n",
     "        x=datasets[0],\n",
-    "        y='increase from collapsing',\n",
+    "        y=\"increase from collapsing\",\n",
     "        tooltip=params,\n",
-    "        )\n",
+    "    )\n",
     "    .mark_boxplot()\n",
     "    .properties(width=75, height=200)\n",
-    "    .facet(column='metric')\n",
-    "    .resolve_scale(y='independent')\n",
-    "    )\n",
+    "    .facet(column=\"metric\")\n",
+    "    .resolve_scale(y=\"independent\")\n",
+    ")\n",
     "\n",
     "collapse_chart"
    ]
@@ -636,11 +636,11 @@
    },
    "outputs": [],
    "source": [
-    "data = (data\n",
-    "        .query('collapse == \"collapsed\"')\n",
-    "        .drop(columns='collapse')\n",
-    "        .reset_index(drop=True)\n",
-    "        )"
+    "data = (\n",
+    "    data.query('collapse == \"collapsed\"')\n",
+    "    .drop(columns=\"collapse\")\n",
+    "    .reset_index(drop=True)\n",
+    ")"
    ]
   },
   {
@@ -754,19 +754,17 @@
     }
    ],
    "source": [
-    "params_data = (\n",
-    "    data\n",
-    "    .melt(id_vars=datasets + metrics,\n",
-    "          value_vars=params,\n",
-    "          var_name='parameter',\n",
-    "          value_name='parameter_value',\n",
-    "          )\n",
-    "    .melt(id_vars=[*datasets, 'parameter', 'parameter_value'],\n",
-    "          value_vars=metrics,\n",
-    "          var_name='metric',\n",
-    "          value_name='metric_value',\n",
-    "          )\n",
-    "    )\n",
+    "params_data = data.melt(\n",
+    "    id_vars=datasets + metrics,\n",
+    "    value_vars=params,\n",
+    "    var_name=\"parameter\",\n",
+    "    value_name=\"parameter_value\",\n",
+    ").melt(\n",
+    "    id_vars=[*datasets, \"parameter\", \"parameter_value\"],\n",
+    "    value_vars=metrics,\n",
+    "    var_name=\"metric\",\n",
+    "    value_name=\"metric_value\",\n",
+    ")\n",
     "\n",
     "params_data.head()"
    ]
@@ -852,21 +850,22 @@
    "source": [
     "params_chart = (\n",
     "    alt.Chart(params_data)\n",
-    "    .encode(x='parameter_value',\n",
-    "            y=alt.Y('metric_value',\n",
-    "                    scale=alt.Scale(nice=False,\n",
-    "                                    zero=False),\n",
-    "                    ),\n",
-    "            color='noise',\n",
-    "            tooltip=[*datasets, 'metric', 'metric_value', 'parameter', 'parameter_value'],\n",
-    "            )\n",
-    "    .mark_point()\n",
-    "    .facet(row='metric',\n",
-    "           column='parameter',\n",
-    "           )\n",
-    "    .resolve_scale(x='independent',\n",
-    "                   y='independent')\n",
+    "    .encode(\n",
+    "        x=\"parameter_value\",\n",
+    "        y=alt.Y(\n",
+    "            \"metric_value\",\n",
+    "            scale=alt.Scale(nice=False, zero=False),\n",
+    "        ),\n",
+    "        color=\"noise\",\n",
+    "        tooltip=[*datasets, \"metric\", \"metric_value\", \"parameter\", \"parameter_value\"],\n",
     "    )\n",
+    "    .mark_point()\n",
+    "    .facet(\n",
+    "        row=\"metric\",\n",
+    "        column=\"parameter\",\n",
+    "    )\n",
+    "    .resolve_scale(x=\"independent\", y=\"independent\")\n",
+    ")\n",
     "\n",
     "params_chart"
    ]
