--- a/tests/profile_fitting.ipynb
+++ b/tests/profile_fitting.ipynb
@@ -31,29 +31,31 @@
     "import polyclonal\n",
     "\n",
     "data_to_fit = (\n",
-    "    pd.read_csv('../notebooks/RBD_variants_escape_exact.csv', na_filter=False)\n",
+    "    pd.read_csv(\"../notebooks/RBD_variants_escape_exact.csv\", na_filter=False)\n",
     "    .query('library == \"avg2muts\"')\n",
-    "    .query('concentration in [0.25, 1, 4]')\n",
-    "    )\n",
+    "    .query(\"concentration in [0.25, 1, 4]\")\n",
+    ")\n",
     "\n",
     "poly_abs = polyclonal.Polyclonal(\n",
-    "            data_to_fit=data_to_fit,\n",
-    "            activity_wt_df=pd.DataFrame.from_records(\n",
-    "                        [('epitope 1', 3.0),\n",
-    "                         ('epitope 2', 2.0),\n",
-    "                         ('epitope 3', 1.0),\n",
-    "                         ],\n",
-    "                        columns=['epitope', 'activity'],\n",
-    "                        ),\n",
-    "            site_escape_df=pd.DataFrame.from_records(\n",
-    "                        [('epitope 1', 484, 10.0),\n",
-    "                         ('epitope 2', 446, 10.0),\n",
-    "                         ('epitope 3', 417, 10.0),\n",
-    "                         ],\n",
-    "                        columns=['epitope', 'site', 'escape'],\n",
-    "                        ),\n",
-    "            data_mut_escape_overlap='fill_to_data',\n",
-    "            )"
+    "    data_to_fit=data_to_fit,\n",
+    "    activity_wt_df=pd.DataFrame.from_records(\n",
+    "        [\n",
+    "            (\"epitope 1\", 3.0),\n",
+    "            (\"epitope 2\", 2.0),\n",
+    "            (\"epitope 3\", 1.0),\n",
+    "        ],\n",
+    "        columns=[\"epitope\", \"activity\"],\n",
+    "    ),\n",
+    "    site_escape_df=pd.DataFrame.from_records(\n",
+    "        [\n",
+    "            (\"epitope 1\", 484, 10.0),\n",
+    "            (\"epitope 2\", 446, 10.0),\n",
+    "            (\"epitope 3\", 417, 10.0),\n",
+    "        ],\n",
+    "        columns=[\"epitope\", \"site\", \"escape\"],\n",
+    "    ),\n",
+    "    data_mut_escape_overlap=\"fill_to_data\",\n",
+    ")"
    ]
   },
   {
@@ -449,7 +451,7 @@
    "source": [
     "import cProfile\n",
     "\n",
-    "cProfile.run('poly_abs.fit(verbosity=1)', 'pstats')"
+    "cProfile.run(\"poly_abs.fit(verbosity=1)\", \"pstats\")"
    ]
   },
   {
@@ -530,9 +532,9 @@
    "source": [
     "import pstats\n",
     "\n",
-    "stats = pstats.Stats('pstats')\n",
+    "stats = pstats.Stats(\"pstats\")\n",
     "\n",
-    "stats.sort_stats('tottime').print_stats(25)"
+    "stats.sort_stats(\"tottime\").print_stats(25)"
    ]
   },
   {
