--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -35,60 +35,62 @@
     "\n",
     "from polyclonal import Polyclonal\n",
     "\n",
-    "activity_wt_df = pd.DataFrame({'epitope':  ['e1', 'e2'],\n",
-    "                               'activity': [ 2.0,  1.0]})\n",
+    "activity_wt_df = pd.DataFrame({\"epitope\": [\"e1\", \"e2\"], \"activity\": [2.0, 1.0]})\n",
     "\n",
-    "mut_escape_df = pd.DataFrame({\n",
-    "       'mutation': ['M1C', 'M1C', 'G2A', 'G2A', 'A4K', 'A4K', 'A4L', 'A4L'],\n",
-    "       'epitope':  [ 'e1',  'e2',  'e1',  'e2',  'e1',  'e2',  'e1',  'e2'],\n",
-    "       'escape':   [  2.0,   0.0,   3.0,   0.0,  0.0,    2.5,   0.0,   1.5],\n",
-    "       })\n",
+    "mut_escape_df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"mutation\": [\"M1C\", \"M1C\", \"G2A\", \"G2A\", \"A4K\", \"A4K\", \"A4L\", \"A4L\"],\n",
+    "        \"epitope\": [\"e1\", \"e2\", \"e1\", \"e2\", \"e1\", \"e2\", \"e1\", \"e2\"],\n",
+    "        \"escape\": [2.0, 0.0, 3.0, 0.0, 0.0, 2.5, 0.0, 1.5],\n",
+    "    }\n",
+    ")\n",
     "\n",
-    "polyclonal_sim = Polyclonal(activity_wt_df=activity_wt_df,\n",
-    "                            mut_escape_df=mut_escape_df)\n",
+    "polyclonal_sim = Polyclonal(activity_wt_df=activity_wt_df, mut_escape_df=mut_escape_df)\n",
     "\n",
     "variants_df = pd.DataFrame.from_records(\n",
-    "         [('AA', ''),\n",
-    "          ('AC', 'M1C'),\n",
-    "          ('AG', 'G2A'),\n",
-    "          ('AT', 'A4K'),\n",
-    "          ('TA', 'A4L'),\n",
-    "          ('CA', 'M1C G2A'),\n",
-    "          ('CG', 'M1C A4K'),\n",
-    "          ('CC', 'G2A A4K'),\n",
-    "          ('TC', 'G2A A4L'),\n",
-    "          ('CT', 'M1C G2A A4K'),\n",
-    "          ('TG', 'M1C G2A A4L'),\n",
-    "          ('GA', 'M1C'),\n",
-    "          ],\n",
-    "         columns=['barcode', 'aa_substitutions'])\n",
+    "    [\n",
+    "        (\"AA\", \"\"),\n",
+    "        (\"AC\", \"M1C\"),\n",
+    "        (\"AG\", \"G2A\"),\n",
+    "        (\"AT\", \"A4K\"),\n",
+    "        (\"TA\", \"A4L\"),\n",
+    "        (\"CA\", \"M1C G2A\"),\n",
+    "        (\"CG\", \"M1C A4K\"),\n",
+    "        (\"CC\", \"G2A A4K\"),\n",
+    "        (\"TC\", \"G2A A4L\"),\n",
+    "        (\"CT\", \"M1C G2A A4K\"),\n",
+    "        (\"TG\", \"M1C G2A A4L\"),\n",
+    "        (\"GA\", \"M1C\"),\n",
+    "    ],\n",
+    "    columns=[\"barcode\", \"aa_substitutions\"],\n",
+    ")\n",
     "\n",
-    "escape_probs = polyclonal_sim.prob_escape(variants_df=variants_df,\n",
-    "                                          concentrations=[1.0, 2.0, 4.0])\n",
+    "escape_probs = polyclonal_sim.prob_escape(\n",
+    "    variants_df=variants_df, concentrations=[1.0, 2.0, 4.0]\n",
+    ")\n",
     "\n",
-    "data_to_fit = (\n",
-    "         escape_probs\n",
-    "         .rename(columns={'predicted_prob_escape': 'prob_escape'})\n",
-    "         )\n",
+    "data_to_fit = escape_probs.rename(columns={\"predicted_prob_escape\": \"prob_escape\"})\n",
     "\n",
-    "polyclonal_data = Polyclonal(data_to_fit=data_to_fit,\n",
-    "                             activity_wt_df=activity_wt_df,\n",
-    "                             site_escape_df=pd.DataFrame.from_records(\n",
-    "                                    [('e1', 1, 1.0), ('e1', 4, 0.0),\n",
-    "                                     ('e2', 1, 0.0), ('e2', 4, 2.0)],\n",
-    "                                    columns=['epitope', 'site', 'escape']),\n",
-    "                             data_mut_escape_overlap='fill_to_data',\n",
-    "                             )\n",
+    "polyclonal_data = Polyclonal(\n",
+    "    data_to_fit=data_to_fit,\n",
+    "    activity_wt_df=activity_wt_df,\n",
+    "    site_escape_df=pd.DataFrame.from_records(\n",
+    "        [(\"e1\", 1, 1.0), (\"e1\", 4, 0.0), (\"e2\", 1, 0.0), (\"e2\", 4, 2.0)],\n",
+    "        columns=[\"epitope\", \"site\", \"escape\"],\n",
+    "    ),\n",
+    "    data_mut_escape_overlap=\"fill_to_data\",\n",
+    ")\n",
     "\n",
     "# second model doesn't have the same mutations for all concentrations\n",
-    "polyclonal_data2 = Polyclonal(data_to_fit=data_to_fit.head(30),\n",
-    "                             activity_wt_df=activity_wt_df,\n",
-    "                             site_escape_df=pd.DataFrame.from_records(\n",
-    "                                    [('e1', 1, 1.0), ('e1', 4, 0.0),\n",
-    "                                     ('e2', 1, 0.0), ('e2', 4, 2.0)],\n",
-    "                                    columns=['epitope', 'site', 'escape']),\n",
-    "                             data_mut_escape_overlap='fill_to_data',\n",
-    "                             )"
+    "polyclonal_data2 = Polyclonal(\n",
+    "    data_to_fit=data_to_fit.head(30),\n",
+    "    activity_wt_df=activity_wt_df,\n",
+    "    site_escape_df=pd.DataFrame.from_records(\n",
+    "        [(\"e1\", 1, 1.0), (\"e1\", 4, 0.0), (\"e2\", 1, 0.0), (\"e2\", 4, 2.0)],\n",
+    "        columns=[\"epitope\", \"site\", \"escape\"],\n",
+    "    ),\n",
+    "    data_mut_escape_overlap=\"fill_to_data\",\n",
+    ")"
    ]
   },
   {
@@ -129,37 +131,38 @@
     "eps = 1e-8\n",
     "\n",
     "for i, model in enumerate([polyclonal_data, polyclonal_data2]):\n",
-    "    \n",
+    "\n",
     "    print(f\"Model {i}\")\n",
-    "    \n",
+    "\n",
     "    # analytical\n",
     "    p_vc, dpvc_dparams = model._compute_1d_pvs(\n",
-    "                                params=model._params,\n",
-    "                                one_binarymap=model._one_binarymap,\n",
-    "                                binarymaps=model._binarymaps,\n",
-    "                                cs=model._cs,\n",
-    "                                calc_grad=True,\n",
-    "                                )\n",
-    "    \n",
+    "        params=model._params,\n",
+    "        one_binarymap=model._one_binarymap,\n",
+    "        binarymaps=model._binarymaps,\n",
+    "        cs=model._cs,\n",
+    "        calc_grad=True,\n",
+    "    )\n",
+    "\n",
     "    # numerical, compare to analytical\n",
     "    for iparam in range(len(model._params)):\n",
     "        eps_vec = numpy.zeros(len(model._params))\n",
     "        eps_vec[iparam] = eps\n",
     "        p_vc_eps = model._compute_1d_pvs(\n",
-    "                        params=model._params + eps_vec,\n",
-    "                        one_binarymap=model._one_binarymap,\n",
-    "                        binarymaps=model._binarymaps,\n",
-    "                        cs=model._cs,\n",
-    "                        calc_grad=False,\n",
-    "                        )\n",
+    "            params=model._params + eps_vec,\n",
+    "            one_binarymap=model._one_binarymap,\n",
+    "            binarymaps=model._binarymaps,\n",
+    "            cs=model._cs,\n",
+    "            calc_grad=False,\n",
+    "        )\n",
     "        numerical_grad = (p_vc_eps - p_vc) / eps\n",
     "        analytical_grad = dpvc_dparams[iparam].toarray()\n",
-    "        diff = numpy.sqrt(((numerical_grad - analytical_grad)**2).sum())\n",
-    "        mag = numpy.sqrt((analytical_grad**2).sum())\n",
+    "        diff = numpy.sqrt(((numerical_grad - analytical_grad) ** 2).sum())\n",
+    "        mag = numpy.sqrt((analytical_grad ** 2).sum())\n",
     "        if (diff > 1e-7) or (diff / mag > 1e-7):\n",
-    "            raise ValueError(f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
-    "                             f\"{analytical_grad=}\\n{numerical_grad=}\")\n",
-    "    print('All gradients check')"
+    "            raise ValueError(\n",
+    "                f\"{iparam=}, {diff=}, {mag=}\\n\" f\"{analytical_grad=}\\n{numerical_grad=}\"\n",
+    "            )\n",
+    "    print(\"All gradients check\")"
    ]
   },
   {
@@ -202,32 +205,27 @@
     "delta = 2\n",
     "\n",
     "for i, model in enumerate([polyclonal_data, polyclonal_data2]):\n",
-    "    \n",
+    "\n",
     "    print(f\"Model {i}\")\n",
-    "    \n",
+    "\n",
     "    # analytical\n",
-    "    loss, dloss = model._loss_dloss(\n",
-    "                                params=model._params,\n",
-    "                                delta=2\n",
-    "                                )\n",
-    "    \n",
+    "    loss, dloss = model._loss_dloss(params=model._params, delta=2)\n",
+    "\n",
     "    # numerical, compare to analytical\n",
     "    for iparam in range(len(model._params)):\n",
     "        eps_vec = numpy.zeros(len(model._params))\n",
     "        eps_vec[iparam] = eps\n",
-    "        loss_eps, _ = model._loss_dloss(\n",
-    "                        params=model._params + eps_vec,\n",
-    "                        delta=2\n",
-    "                        )\n",
+    "        loss_eps, _ = model._loss_dloss(params=model._params + eps_vec, delta=2)\n",
     "        numerical_grad = (loss_eps - loss) / eps\n",
     "        analytical_grad = dloss[iparam]\n",
-    "        diff = numpy.sqrt((numerical_grad - analytical_grad)**2)\n",
-    "        mag = numpy.sqrt(analytical_grad**2)\n",
+    "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
+    "        mag = numpy.sqrt(analytical_grad ** 2)\n",
     "        if (diff > 1e-7) or (diff / mag > 1e-6):\n",
-    "            raise ValueError(f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
-    "                             f\"{analytical_grad=}\\n{numerical_grad=}\")\n",
-    "            \n",
-    "    print('All gradients check')"
+    "            raise ValueError(\n",
+    "                f\"{iparam=}, {diff=}, {mag=}\\n\" f\"{analytical_grad=}\\n{numerical_grad=}\"\n",
+    "            )\n",
+    "\n",
+    "    print(\"All gradients check\")"
    ]
   },
   {
@@ -268,32 +266,31 @@
     "eps = 1e-7\n",
     "\n",
     "for i, model in enumerate([polyclonal_data, polyclonal_data2]):\n",
-    "    \n",
+    "\n",
     "    print(f\"Model {i}\")\n",
-    "    \n",
+    "\n",
     "    # analytical\n",
-    "    reg, dreg = model._reg_escape(params=model._params,\n",
-    "                                  weight=0.2,\n",
-    "                                  delta=0.5)\n",
-    "    \n",
+    "    reg, dreg = model._reg_escape(params=model._params, weight=0.2, delta=0.5)\n",
+    "\n",
     "    # numerical, compare to analytical\n",
     "    for iparam in range(len(model._params)):\n",
     "        eps_vec = numpy.zeros(len(model._params))\n",
     "        eps_vec[iparam] = eps\n",
     "        reg_eps, _ = model._reg_escape(\n",
-    "                        params=model._params + eps_vec,\n",
-    "                        weight=0.2,\n",
-    "                        delta=0.5,\n",
-    "                        )\n",
+    "            params=model._params + eps_vec,\n",
+    "            weight=0.2,\n",
+    "            delta=0.5,\n",
+    "        )\n",
     "        numerical_grad = (reg_eps - reg) / eps\n",
     "        analytical_grad = dreg[iparam]\n",
-    "        diff = numpy.sqrt((numerical_grad - analytical_grad)**2)\n",
-    "        mag = numpy.sqrt(analytical_grad**2)\n",
+    "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
+    "        mag = numpy.sqrt(analytical_grad ** 2)\n",
     "        if (diff > 1e-7) or (mag > 0 and diff / mag > 1e-6):\n",
-    "            raise ValueError(f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
-    "                             f\"{analytical_grad=}\\n{numerical_grad=}\")\n",
-    "            \n",
-    "    print('All gradients check')"
+    "            raise ValueError(\n",
+    "                f\"{iparam=}, {diff=}, {mag=}\\n\" f\"{analytical_grad=}\\n{numerical_grad=}\"\n",
+    "            )\n",
+    "\n",
+    "    print(\"All gradients check\")"
    ]
   },
   {
@@ -334,31 +331,34 @@
     "eps = 1e-7\n",
     "\n",
     "for i, model in enumerate([polyclonal_data, polyclonal_data2]):\n",
-    "    \n",
+    "\n",
     "    print(f\"Model {i}\")\n",
-    "    \n",
+    "\n",
     "    # analytical\n",
-    "    reg, dreg = model._reg_spread(params=model._params,\n",
-    "                                  weight=0.2,\n",
-    "                                  )\n",
-    "    \n",
+    "    reg, dreg = model._reg_spread(\n",
+    "        params=model._params,\n",
+    "        weight=0.2,\n",
+    "    )\n",
+    "\n",
     "    # numerical, compare to analytical\n",
     "    for iparam in range(len(model._params)):\n",
     "        eps_vec = numpy.zeros(len(model._params))\n",
     "        eps_vec[iparam] = eps\n",
     "        reg_eps, _ = model._reg_spread(\n",
-    "                        params=model._params + eps_vec,\n",
-    "                        weight=0.2,\n",
-    "                        )\n",
+    "            params=model._params + eps_vec,\n",
+    "            weight=0.2,\n",
+    "        )\n",
     "        numerical_grad = (reg_eps - reg) / eps\n",
     "        analytical_grad = dreg[iparam]\n",
-    "        diff = numpy.sqrt((numerical_grad - analytical_grad)**2)\n",
-    "        mag = numpy.sqrt(analytical_grad**2)\n",
+    "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
+    "        mag = numpy.sqrt(analytical_grad ** 2)\n",
     "        if (diff > 1e-7) or (mag > 0 and diff / mag > 1e-6):\n",
-    "            raise ValueError(f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
-    "                             f\"{analytical_grad=}\\n{numerical_grad=}\\n\")\n",
-    "            \n",
-    "    print('All gradients check')"
+    "            raise ValueError(\n",
+    "                f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
+    "                f\"{analytical_grad=}\\n{numerical_grad=}\\n\"\n",
+    "            )\n",
+    "\n",
+    "    print(\"All gradients check\")"
    ]
   },
   {
