--- a/tests/test_variant_filtering.ipynb
+++ b/tests/test_variant_filtering.ipynb
@@ -123,15 +123,17 @@
     }
    ],
    "source": [
-    "train_df = pd.DataFrame.from_records([\n",
-    "            ('var1', '', 0.5, 0.1),\n",
-    "            ('var2', 'M1A', 0.5, 0.2),\n",
-    "            ('var3', 'M1A G2A', 0.5, 0.3),\n",
-    "            ('var4', 'M1A G2C', 0.5, 0.4),\n",
-    "            ('var5', 'G2A', 1, 0.5),\n",
-    "            ('var6', 'M1A', 1, 0.6),\n",
-    "            ],\n",
-    "            columns=['barcode', 'aa_substitutions', 'concentration', 'prob_escape'])\n",
+    "train_df = pd.DataFrame.from_records(\n",
+    "    [\n",
+    "        (\"var1\", \"\", 0.5, 0.1),\n",
+    "        (\"var2\", \"M1A\", 0.5, 0.2),\n",
+    "        (\"var3\", \"M1A G2A\", 0.5, 0.3),\n",
+    "        (\"var4\", \"M1A G2C\", 0.5, 0.4),\n",
+    "        (\"var5\", \"G2A\", 1, 0.5),\n",
+    "        (\"var6\", \"M1A\", 1, 0.6),\n",
+    "    ],\n",
+    "    columns=[\"barcode\", \"aa_substitutions\", \"concentration\", \"prob_escape\"],\n",
+    ")\n",
     "train_df"
    ]
   },
@@ -161,7 +163,7 @@
     }
    ],
    "source": [
-    "seen_mutations = ('M1A', 'G2A', 'G2C')\n",
+    "seen_mutations = (\"M1A\", \"G2A\", \"G2C\")\n",
     "seen_mutations"
    ]
   },
@@ -269,16 +271,18 @@
     }
    ],
    "source": [
-    "predict_df = pd.DataFrame.from_records([\n",
-    "            ('var1', '', 0.5),\n",
-    "            ('var2', 'M1C', 0.5),\n",
-    "            ('var3', 'G2A', 0.5),\n",
-    "            ('var4', 'M1C G2C', 0.5),\n",
-    "            ('var5', 'G2A', 1),\n",
-    "            ('var6', 'M1A G2A', 1),\n",
-    "            ('var7', 'G2C', 1),\n",
-    "            ],\n",
-    "            columns=['barcode', 'aa_substitutions', 'concentration'])\n",
+    "predict_df = pd.DataFrame.from_records(\n",
+    "    [\n",
+    "        (\"var1\", \"\", 0.5),\n",
+    "        (\"var2\", \"M1C\", 0.5),\n",
+    "        (\"var3\", \"G2A\", 0.5),\n",
+    "        (\"var4\", \"M1C G2C\", 0.5),\n",
+    "        (\"var5\", \"G2A\", 1),\n",
+    "        (\"var6\", \"M1A G2A\", 1),\n",
+    "        (\"var7\", \"G2C\", 1),\n",
+    "    ],\n",
+    "    columns=[\"barcode\", \"aa_substitutions\", \"concentration\"],\n",
+    ")\n",
     "predict_df"
    ]
   },
@@ -308,7 +312,7 @@
     }
    ],
    "source": [
-    "predict_mutations = ('M1A', 'G2A', 'G2C', 'M1C')\n",
+    "predict_mutations = (\"M1A\", \"G2A\", \"G2C\", \"M1C\")\n",
     "predict_mutations"
    ]
   },
@@ -422,7 +426,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert filtered_df['aa_substitutions'].str.contains('M1C').any() == False"
+    "assert filtered_df[\"aa_substitutions\"].str.contains(\"M1C\").any() == False"
    ]
   },
   {
